--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bego",
+  "name": "pokemon",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,14 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.3",
+    "@angular/cdk": "^10.0.2",
     "@angular/common": "~10.0.3",
     "@angular/compiler": "~10.0.3",
     "@angular/core": "~10.0.3",
     "@angular/forms": "~10.0.3",
+    "@angular/localize": "~10.0.3",
+    "@angular/material": "^10.0.2",
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@popperjs/core": "^2.4.4",
+    "@sweetalert2/ngx-sweetalert2": "^8.1.1",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "ngx-spinner": "^10.0.1",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^9.17.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
